updated portfolio with updated works

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <a href="#contact-information">Contact Information</a>
                 </li>
                 <li>
-                    <a href="#project-1">Recipe-Generator</a>
+                    <a href="#project-1">Class Projects</a>
                 </li>
                 <li>
                     <a href="#homework">Featured Works</a>
@@ -38,10 +38,16 @@
             </ul>
         </figure>
         <figure id="project-1" class="project-1">
+            <img src="./assets/images/project-planr.JPG" class="float-right" />
             <img src="./assets/images/project-1.jpg" class="float-right" />
             <h2><a href="https://nihalabdalla.github.io/Recipe_Generator/">Recipe-Generator</a></h2>
             <p>
                 Easy, mobile first app that will count calories, carbs, fat, and proteins from a vast list of meals for you to choose from. For ease there is cooking instructions as well.
+            </p>
+            <br>
+            <h2><a href="https://shielded-refuge-98877.herokuapp.com/user/2">Project Planner</a></h2>
+            <p>
+                App with drag and drop functionality to help you plan your work tasks.
             </p>
         </figure>
         <figure id="homework" class="homework">
@@ -50,6 +56,7 @@
             <ul>
                 <li><a href="https://rutter10.github.io/osu-hw-3/">Password Generator</a></li>
                 <li><a href="https://rutter10.github.io/Work-Schedule/">Work Scheduler</a></li>
+                <li><a href="https://calm-hollows-68567.herokuapp.com/">Note Taker</a></li>
             </ul> 
         </figure>
     </section>
@@ -67,6 +74,8 @@
             <h3>Full Stack Development</h3>
             <ul>
                <li>Recipe-Generator</li>
+               <li>Project-Taker</li>
+               <li>New Works Coming Soon</li>
             </ul>
             <br>
             <h3> Engineering </h3>
@@ -91,7 +100,7 @@
 <footer>
         <h2>Full Stack Portfolio</h2>
         <p>
-            Updated 6/19/21
+            Updated 6/20/21
         </p>
 </footer>    
 
